# blacktape-desktop

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  app.module.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  lyrics.rs  main.rs  types.rs
src-tauri/src/audio/: mod.rs  player.rs
src-tauri/src/audio/media_controls/: mod.rs  wrapper.rs
src-tauri/src/db/: db.rs  schema.rs
src-tauri/src/discord_presence/: cover_fetcher.rs  discord_rpc.rs  mod.rs
src-tauri/src/music/: scan.rs
src/components/artist-albums/: ArtistAlbums.tsx  artist-albums.module.css
src/components/left-sidebar/: LeftSidebar.tsx  left-sidebar.module.css
src/components/lyrics/: Lyrics.tsx  lyrics.module.css
src/components/player-controls/: PlayerControls.tsx  player-controls.module.css
src/components/right-sidebar/: RightSidebar.tsx  right-sidebar.module.css
src/components/search-bar/: SearchBar.tsx  search-bar.module.css
src/shared/hooks/: usePlayer.ts
src/shared/lib/: audio.ts  dialog.ts  time.ts
src/shared/providers/: theme-provider.tsx
src/shared/store/: audioStore.ts  libraryStore.ts
src/styles/: globals.css  reset.css  utilities.css  variables.css
