[package]
name = "blacktape-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blacktape_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.22.2", default-features = true }
lofty = "0.23.1"
walkdir = "2.5.0"
tauri-plugin-dialog = "2.6.0"
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
raw-window-handle = "0.6.2"

[profile.dev]
opt-level = 0      # fastest compile
debug = 2          # keep debug info if needed
incremental = true # default, keeps previous build artifacts
