[package]
name = "blacktape-desktop"
version = "0.1.1"
description = "A desktop music player that can download and organize music from different platforms."
authors = ["seafood"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blacktape_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10.1"
rodio = { version = "0.22.2", default-features = true, features = ["symphonia-all"] }
lofty = "0.24.0"
walkdir = "2.5.0"
tauri-plugin-dialog = "2.6.0"
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
discord-rich-presence = "1.1.0"
quick-xml = { version = "0.39.2", features = ["serialize", "serde"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
urlencoding = "2.1.3"
tokio = "1.51.1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = "0.8.6"
sha2 = "0.11.0"

[profile.dev]
opt-level = 0      # fastest compile
debug = 2          # keep debug info if needed
incremental = true # default, keeps previous build artifacts

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
